[package]
name = "lockdown"
version = "2.1.0"
edition = "2021"
description = "Secure file/directory encryption tool using AES-256-GCM"

[[bin]]
name = "lockdown"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
indicatif = "0.17"
rpassword = "7"
thiserror = "1"
dirs = "5"
hex = "0.4"
colored = "2"
chrono = "0.4"
